--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "md5": "^2.2.1",
     "moment": "^2.24.0",
     "path": "^0.12.7",
+    "promise-mysql": "^4.1.0",
     "querystring": "^0.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
