--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:1234",
   "dependencies": {
+    "ant-design-pro": "^2.3.2",
     "antd": "^3.22.2",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
